addding first project to check layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Mason Brill</title>
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<html lang="en">
+<head>
+	<!-- linking styles -->
+	<link rel="stylesheet" href="./index.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+	<title>Mason Brill - Portfolio</title>
+</head>
+<body>
+	<img class="background" src="background.svg" alt="starry background"/>
 
+	<h1 class="intro">Welcome!</h1>
 
+	<!-- first row of webpage, flexbox, welcome container -->
+	<div class="welcome-container">
+	  <div class="welcome-left">
+	    <h1 class="heading-left">I am Mason Brill</h1>
+		<p class="text-left">
+			I am a versatile software engineer with proficient
+			frontend expierence. I have worked with a wide range
+			of technologies which includes the MERN, LAMP, and FREMP
+			stacks. I have also worked with just about every mainstream
+			programming language such as python, java, javascript, C,
+			and more. Ever since I was young I have always
+			had a curiosity for technology. I always wanted to
+			know what was going on behind the scenes. What made
+			computers tick? How was I able to play incredible
+			video games? How can these computers display graphics
+			on the screen? These are the questions I asked myself
+			and was determined to find the answer to. This is
+			what lead me to my pursuit of a degree in computer
+			science. I also took personal endevours to discover
+			topics I wanted to find answers to. I learn something
+			new everyday and the journey will never stop in this
+			ever-changing field.
+		</p>
+	  </div>
+
+	  <!-- picture of me -->
+	  <img src="https://masons-portfolio-ec4043d216a7.herokuapp.com/images/Mason.png" class="me" alt="picture of Mason"/>
+
+	  <!-- contact me container, flexbox -->
+	  <div class="contact-container">
+		<h1 class="heading-left">Contact Me</h1>
+		<p class="Email">
+		mason-brill@outlook.com
+		masonjamesbrill@yahoo.com
+		</p>
+
+		<p class="Email">
+		<a class="Email" href="https://www.linkedin.com/in/mason-brill-9218712a4" target="_blank">Linkedin</a>
+		</p>
+
+		<p class="Email">
+		<a class="Email" href="https://github.com/Mason-Brill" target="_blank">GitHub</a>
+		</p>
+	  </div>
+	</div>
+
+	<h1 class="intro">Employment</h1>
+
+	<div class="even-image">
+				<img src='./images/1.webp' class='even-image' alt="Colorantí logo"/>
+				<h2><a href="https://www.empowertampa.com/" target="_blank">Colorantí</a></h2>
+				<h3 class='skills'>
+					- React
+					- Flask
+					- Python
+					- Javascript
+					- HTML
+					- CSS
+				</h3>
+				<p3 class='desc'>
+					During the winter/spring of 2024, I took on an internship as a software engineer
+					at the startup Colorantí. This company had a new encryption algorithm they needed
+					to showcase to investors and customers. I was tasked with developing a web application
+					that would serve as demo for users to interact with to showcase how it works. This 
+					internship provided me with great hands on, professional software development.
+				</p3>
+			</div>
+	<div class="extra-space"></div>
+</body>
 </html>
