addding first project to check layout

--- a/index.html
+++ b/index.html
@@ -60,24 +60,28 @@
 
 	<h1 class="intro">Employment</h1>
 
-	<div class="even-image">
+	<div class="even-class">
 				<img src='./images/1.webp' class='even-image' alt="Colorantí logo"/>
-				<h2><a href="https://www.empowertampa.com/" target="_blank">Colorantí</a></h2>
-				<h3 class='skills'>
-					- React
-					- Flask
-					- Python
-					- Javascript
-					- HTML
-					- CSS
-				</h3>
-				<p3 class='desc'>
-					During the winter/spring of 2024, I took on an internship as a software engineer
-					at the startup Colorantí. This company had a new encryption algorithm they needed
-					to showcase to investors and customers. I was tasked with developing a web application
-					that would serve as demo for users to interact with to showcase how it works. This 
-					internship provided me with great hands on, professional software development.
-				</p3>
+<div>
+<h2 class="title" style="text-decoration: underline;">Position:</h2>
+<h2 class="title">Frontend Developer</h2>
+</div>
+
+<div>
+<h2 class="title" style="text-decoration: underline;">Company:</h1>
+<h2>Colorantí</h2>
+</div>
+
+<div>
+<h2 class="title" style="text-decoration: underline;">Skills</h1>
+<h3 class='skills'>-React 
+-Flask
+-Python 
+-Javascript 
+-HTML 
+-CSS</h3>
+</div>
+				<p3 class='desc'>During the winter/spring of 2024, I took on an internship as a software engineer at the startup Colorantí. This company had a new encryption algorithm they needed to showcase to investors and customers. I was tasked with developing a web application that would serve as demo for users to interact with to showcase how it works. This internship provided me with great hands on, professional software development.</p3>
 			</div>
 	<div class="extra-space"></div>
 </body>
