pushing changes to check mobile view

--- a/index.html
+++ b/index.html
@@ -58,22 +58,50 @@
 	  </div>
 	</div>
 
-	<h1 class="intro">Employment</h1>
+	<h1 class="intro">Professional Experience</h1>
 
 	<div class="even-class">
-				<img src='./images/1.webp' class='even-image' alt="Colorantí logo"/>
-<div>
+				<img src='./images/0.png' class='even-image' alt="BST Global logo"/>
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Position:</h2>
+<h2 class="title">Quality Assurance Engineer</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Company:</h1>
+<h2 class="title">BST Global</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-Javascript
+-Playwright
+-C#
+-Azure
+-Azure DevOps
+-DataBricks
+-Airflow</h3>
+</div>
+			<div class="child-container">
+				<h2 class="title" style="text-decoration: underline;">Description:</h2>
+				<p3 class='desc'>As I completed my Bachelor of Science degree in computer science from the University of Tampa, I was very fortunate to have been offered an internship as a Quality Assurance Engineer with BST Global, an ERP solutions company. This internship not only helped provide me with an in depth introduction to quality assurance practices, but also gave me knowledge relating to workflow at an enterprise level along with CI/CD practices with Azure pipelines. During the conclusion of this internship, I was offered an extension, in which I happily accepted and is my current position.</div>
+			</div>
+	<div class="extra-space"></div>
+
+
+	<div class="even-class">
+<div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Position:</h2>
 <h2 class="title">Frontend Developer</h2>
 </div>
 
-<div>
+<div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Company:</h1>
-<h2>Colorantí</h2>
+<h2 class="title">Colorantí</h2>
 </div>
 
-<div>
-<h2 class="title" style="text-decoration: underline;">Skills</h1>
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Skills:</h1>
 <h3 class='skills'>-React 
 -Flask
 -Python 
@@ -81,8 +109,74 @@
 -HTML 
 -CSS</h3>
 </div>
-				<p3 class='desc'>During the winter/spring of 2024, I took on an internship as a software engineer at the startup Colorantí. This company had a new encryption algorithm they needed to showcase to investors and customers. I was tasked with developing a web application that would serve as demo for users to interact with to showcase how it works. This internship provided me with great hands on, professional software development.</p3>
-			</div>
-	<div class="extra-space"></div>
+	<div class="child-container">
+		<h2 class="title" style="text-decoration: underline;">Description:</h2>
+		<p3 class='desc'>During the winter/spring of 2024, I took on an internship as a software engineer at the startup Colorantí. This company had a new encryption algorithm they needed to showcase to investors and customers. I was tasked with developing a web application that would serve as demo for users to interact with to showcase how it works. This internship provided me with great hands on, professional software development.</p3>
+	</div>
+	<img src='./images/1.webp' class='even-image' alt="Colorantí logo"/>
+	</div>
+<div class="extra-space"></div>
+
+
+
+<div class="even-class">
+	<img src='./images/2.webp' class='even-image' alt="Empower PT logo"/>
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Position:</h2>
+<h2 class="title">Web Developer</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Company:</h1>
+<h2 class="title">Empower PT</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-WordPress
+-PHP
+-HTML
+-CSS
+-JavaScript
+-SEO
+-Web Hosting</h3>
+</div>
+<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Description:</h2>
+	<p3 class='desc'>Over the summer of 2023, I had an internship as a web developer working at a pilates and physical therapy company that needed some support for their website. It was hosted on Go-Daddy, and managed using WordPress. The company was mainly looking for some support on how they could give their website a more updated look, while improving their SEO.</p3>
+</div>
+</div>
+<div class="extra-space"></div>
+
+
+
+<div class="even-class">
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Position:</h2>
+<h2 class="title">Programming Instructor</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Company:</h1>
+<h2>ID Tech</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-Python
+-Java
+-Lua
+-HTML
+-Game Development</h3>
+</div>
+<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Description:</h2>
+	<p3 class='desc'>Over the spring/summer of 2023 I worked part time as a programming instructor at IDTech. I hosted private and class session ranging from 1-12 students. We covered introductory computer science topics in which the students were able to take the lessons in whatever direction they choose. The private lessons lasted one hour while the class sessions lasted 2 hours.</p3>
+</div>
+<img src='./images/3.webp' class='even-image' alt="ID Tech website homepage"/>
+</div>
+<div class="extra-space"></div>
+<h1 class="intro">Projects</h1>
+
 </body>
 </html>
