pushing changes to check mobile view

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Company:</h1>
-<h2>ID Tech</h2>
+<h2 class="title">ID Tech</h2>
 </div>
 
 <div class="child-container">
@@ -177,6 +177,82 @@
 </div>
 <div class="extra-space"></div>
 <h1 class="intro">Projects</h1>
+
+<div class="even-class">
+<img src='./images/4.webp' class='odd-image' alt="ID Tech website homepage"/>
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Project:</h2>
+<h2 class="title">Nightly Reel</h2>
+</div>
+
+<div class="child-container">
+<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-React
+-Javascript
+-Express
+-Node
+-CSS
+-HTML
+-API's</h3>
+</div>
+<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Description:</h2>
+	<p3 class='desc'>This project was very practical. It allows users to enter their streaming services and a movie or show title they enjoy. The website makes an API request and then returns to them similar movie and show titles along with information about them.</p3>
+</div>
+</div>
+<div class="extra-space"></div>
+
+<div class="even-class">
+	<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Project:</h2>
+	<h2 class="title">Pin The Bay</h2>
+	</div>
+	
+	<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-JavaScript
+-React
+-CSS
+-MongoDB
+-Express
+-Node
+-Google API's</h3>
+	</div>
+	<div class="child-container">
+		<h2 class="title" style="text-decoration: underline;">Description:</h2>
+		<p3 class='desc'>This project was a fun one. It is essentially a Geo-guesser for Tampa Florida. It displays a picture that I took somewhere in Tampa, and then you would be shown the Google maps API and you would need to drag the marker to the location of the picture. It would then tell you how close you were within three decimal places of a mile using an appropriate distance formula.</p3>
+	</div>
+	<img src='./images/5.webp' class='odd-image' alt="ID Tech website homepage"/>
+	</div>
+	<div class="extra-space"></div>
+	
+
+	<div class="even-class">
+		<img src='./images/6.webp' class='odd-image' alt="ID Tech website homepage"/>
+		<div class="child-container">
+		<h2 class="title" style="text-decoration: underline;">Project:</h2>
+		<h2 class="title">Makerspace</h2>
+		</div>
+		
+		<div class="child-container">
+		<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-Python
+-Flask
+-MySQL
+-JavaScript
+-Docker
+-Cloud Deployment</h3>
+		</div>
+		<div class="child-container">
+			<h2 class="title" style="text-decoration: underline;">Description:</h2>
+			<p3 class='desc'>My first real web application I ever developed was for the University of Tampa, with a team of three other individuals. We were tasked with created a web application that would allow students to reserve a new room on campus called the "Makerspace". It was a room for computer science majors that wanted to utilize certain hardware for developing particular projects. Our team created this over the course of a semester and at the end had a fully functioning finished product.</p3>
+		</div>
+		</div>
+		
+<div class="extra-space"></div>
+
+
+
 
 </body>
 </html>
