--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Company:</h1>
-<h2 class="title">BST Global</h2>
+<h2 class="title"><a href="https://bstglobal.com/" target="_blank">BST Global</a></h2>
 </div>
 
 <div class="child-container">
@@ -97,7 +97,7 @@
 
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Company:</h1>
-<h2 class="title">Colorantí</h2>
+<h2 class="title"><a href="https://www.linkedin.com/company/colorantiteam/" target="_blank">Colorantí</a></h2>
 </div>
 
 <div class="child-container">
@@ -128,7 +128,7 @@
 
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Company:</h1>
-<h2 class="title">Empower PT</h2>
+<h2 class="title"><a href="https://www.empowertampa.com/" target="_blank">Empower PT</a></h2>
 </div>
 
 <div class="child-container">
@@ -158,7 +158,7 @@
 
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Company:</h1>
-<h2 class="title">ID Tech</h2>
+<h2 class="title"><a href="https://www.idtech.com/" target="_blank">ID Tech</a></h2>
 </div>
 
 <div class="child-container">
@@ -182,7 +182,7 @@
 <img src='./images/4.webp' class='odd-image' alt="ID Tech website homepage"/>
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Project:</h2>
-<h2 class="title">Nightly Reel</h2>
+<h2 class="title"><a href="https://www.nightlyreel.com/" target="_blank">Nightly Reel</a></h2>
 </div>
 
 <div class="child-container">
@@ -205,7 +205,7 @@
 <div class="even-class">
 	<div class="child-container">
 	<h2 class="title" style="text-decoration: underline;">Project:</h2>
-	<h2 class="title">Pin The Bay</h2>
+	<h2 class="title"><a href="https://www.pinthebay.com/" target="_blank">Pin The Bay</a></h2>
 	</div>
 	
 	<div class="child-container">
@@ -248,10 +248,31 @@
 			<p3 class='desc'>My first real web application I ever developed was for the University of Tampa, with a team of three other individuals. We were tasked with created a web application that would allow students to reserve a new room on campus called the "Makerspace". It was a room for computer science majors that wanted to utilize certain hardware for developing particular projects. Our team created this over the course of a semester and at the end had a fully functioning finished product.</p3>
 		</div>
 		</div>
-		
+
 <div class="extra-space"></div>
 
-
+<div class="even-class">
+	<img src='./images/7.png' class='odd-image' alt="ID Tech website homepage"/>
+	<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Project:</h2>
+	<h2 class="title"><a href="https://github.com/Mason-Brill/RubiksCubeSolver" target="_blank">Rubik's Cube Solver</a></h2>
+	</div>
+	
+	<div class="child-container">
+	<h2 class="title" style="text-decoration: underline;">Skills:</h1>
+<h3 class='skills'>-Java
+-Binary Trees
+-DFS
+-BFS
+-Data Structures
+-Algorithms
+</h3>
+	</div>
+	<div class="child-container">
+		<h2 class="title" style="text-decoration: underline;">Description:</h2>
+		<p3 class='desc'>This was a final project for my data structures and algorithm course. It works by generating a randomized Rubik's Cube and initalizing a solved one as well. Then, these two objects are set as the root of two individual binary trees referenced as a front and back tree. A series of expansions are performed on each of these trees and a BFS and DFS is performed. Each trees have a set of moves associated with each node referring how to get there from the root. As the searchs are performed, These steps are combined until the orientation of the cube matches a node in both the front and back tree. This gives a combined set of moves to perform on the cube to solve it.</p3>
+	</div>
+	</div>
 
 
 </body>
