--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="even-class">
 <div class="child-container">
 <h2 class="title" style="text-decoration: underline;">Position:</h2>
-<h2 class="title">Frontend Developer</h2>
+<h2 class="title">Fullstack Developer</h2>
 </div>
 
 <div class="child-container">
