--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	  </div>
 
 	  <!-- picture of me -->
-	  <img src="https://masons-portfolio-ec4043d216a7.herokuapp.com/images/Mason.png" class="me" alt="picture of Mason"/>
+	  <img src="./images/Mason.jpg" class="me" alt="picture of Mason"/>
 
 	  <!-- contact me container, flexbox -->
 	  <div class="contact-container">
